--- a/clubs.html
+++ b/clubs.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>usiu_hub</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>usiu_hub</title>
+  </head>
+  <body>
     <header>
-        <h1>USIU Student Hub</h1>
+      <h1>USIU Student Hub</h1>
       <p>Connecting Students, Building Futures.</p>
       <nav>
         <ul>
@@ -16,6 +16,47 @@
           <li><a href="https://www.usiu.ac.ke">Official</a></li>
         </ul>
       </nav>
-    </header>    
-</body>
+    </header>
+    <main>
+      <h2>Student Clubs at USIU</h2>
+      <div>
+        <h3>🏆Featured Club</h3>
+        <h4>AI & Robotics Club</h4>
+        <p>
+          Leading the charge in technological innovation at USIU, this dynamic
+          club brings together students passionate about artificial
+          intelligence, robotics, and cutting-edge programming.
+        </p>
+        <p>
+          <strong>🎉 Latest Achievement:</strong> Won the 2024 Nairobi Tech
+          Challenge with their autonomous robot project, competing against 15
+          universities across Kenya!
+        </p>
+        <p>
+          <strong>Next Meeting:</strong> Every Friday at 4:00 PM in the Computer
+          Lab
+        </p>
+      </div>
+      <dl>
+        <dt>AI & Robotics Club</dt>
+        <dd>
+          Exploring artificial intelligence, robotics, and coding competitions.
+        </dd>
+        <dt>Drama Society</dt>
+        <dd>
+          For students passionate about theatre, acting, and storytelling.
+        </dd>
+        <dt>Green Earth Movement</dt>
+        <dd>Focused on sustainability and environmental projects on campus.</dd>
+      </dl>
+      <h3>How to Join a Club</h3>
+      <ol>
+        <li>Find one</li>
+        <li>More stuff</li>
+      </ol>
+    </main>
+    <footer>
+      <a href="./index.html">Home</a>
+    </footer>
+  </body>
 </html>
