finish clubs.html

--- a/clubs.html
+++ b/clubs.html
@@ -28,15 +28,16 @@
           intelligence, robotics, and cutting-edge programming.
         </p>
         <p>
-          <strong>🎉 Latest Achievement:</strong> Won the 2024 Nairobi Tech
+          <strong>Latest Achievement 🎉:</strong> Won the 2024 Nairobi Tech
           Challenge with their autonomous robot project, competing against 15
           universities across Kenya!
         </p>
         <p>
-          <strong>Next Meeting:</strong> Every Friday at 4:00 PM in the Computer
-          Lab
+          <strong>Meeting Time 🗓️:</strong> Every Friday at 4:00 PM in the
+          Computer Lab
         </p>
       </div>
+      <h3>Available Clubs</h3>
       <dl>
         <dt>AI & Robotics Club</dt>
         <dd>
@@ -51,8 +52,42 @@
       </dl>
       <h3>How to Join a Club</h3>
       <ol>
-        <li>Find one</li>
-        <li>More stuff</li>
+        <li>
+          <strong>Browse and Research:</strong> Review the clubs listed above
+          and visit their social media pages or notice boards to learn more
+          about their activities and upcoming events.
+        </li>
+        <li>
+          <strong>Attend a Meeting:</strong> Most clubs welcome visitors to
+          their regular meetings. Check the meeting times and locations posted
+          on campus notice boards or ask current members.
+        </li>
+        <li>
+          <strong>Contact Club Leadership:</strong> Reach out to the club
+          president or secretary via email or approach them during campus
+          events. They can provide you with membership requirements and upcoming
+          activities.
+        </li>
+        <li>
+          <strong>Fill Out Membership Form:</strong> Complete the club's
+          membership application form, which typically includes your contact
+          information, year of study, and reasons for joining.
+        </li>
+        <li>
+          <strong>Pay Membership Fees:</strong> Most clubs require a small
+          membership fee (usually KES 500-1500 per semester) to cover club
+          activities and resources.
+        </li>
+        <li>
+          <strong>Attend Orientation:</strong> New members often attend an
+          orientation session to learn about club rules, upcoming projects, and
+          how to get involved in leadership roles.
+        </li>
+        <li>
+          <strong>Start Participating:</strong> Actively engage in club
+          meetings, events, and projects. The more you participate, the more
+          you'll benefit from the experience!
+        </li>
       </ol>
     </main>
     <footer>
